Ajax adjustments to hero form

--- a/hero.html
+++ b/hero.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <form action="" id="hero">
+    <form action="http://reqr.es/api/users" id="hero">
         <label for="name" class="break">Name:</label>
         <input type="text" name="name" autofocus placeholder="Your Super Hro Name" maxlength="32" required>
         <label for="realName" class="break">Real Name:</label><input type="password" name="realName">
