--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Quiz Ninja</h1>
         <p>Score: <strong id="score">0</strong></p>
+        <p>Hi-Score: <strong id="hiScore">0</strong></p>
         <p id="timer"></p>
     </header>
     <section id="question"></section>
